--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="button_no_thanks">No, Thanks</string>
     <string name="title_dialog_rate_app">Do you enjoy this app?</string>
     <string name="message_dialog_rate_app">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank for your support!</string>
+    <string name="text_degrees_direction">%d\u00b0 %s</string>
     <string name="ad_unit_banner">ca-app-pub-9569615767688214/5083951357</string>
 </resources>
