--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="text_decription_perform_warning">Make a figure 8 until your compass is calibrated. You should only have to do this a few times.</string>
     <string name="magnetic_title">Magnetic Field : </string>
     <string name="calibrate_title">Calibrate</string>
-    <string name="calibrate_low">Low</string>
+    <string name="calibrate_magnetic">Low</string>
     <string name="calibrate_medium">Medium</string>
     <string name="calibrate_hight">Hight</string>
     <string name="button_rate">Rate Now</string>
@@ -18,7 +18,6 @@
     <string name="title_dialog_rate_app">Do you enjoy this app?</string>
     <string name="message_dialog_rate_app">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank for your support!</string>
     <string name="text_degrees_direction">%d\u00b0 %s</string>
-    <string name="ad_unit_banner">ca-app-pub-9569615767688214/5083951357</string>
     <string name="setting">Setting</string>
     <string name="share">Share App</string>
     <string name="rate_us">Rate Us</string>
@@ -27,4 +26,14 @@
     <string name="decription2">It features everything you could ever need to get by in the great outdoors, including a digital compass GPS that shows direction relative to the geographic cardinal directions, with true north and magnetic North, south, east, and west coordinates, speed of travel and map that makes navigating your world faster and easier.</string>
     <string name="decription3">It helps you locate your current location and you can find your way easily through the best compass app with gps map.</string>
     <string name="decription4">If you like the app, please help we 5 star review.Thank you very much!</string>
+    <string name="address_tv_address">Address :</string>
+    <string name="address_latitude">Latitude :</string>
+    <string name="address_longitude">Longitude :</string>
+    <string name="address_networks_gps_20_m">NetWorks GPS ±20 m</string>
+    <string name="map_enter_your_destination">enter your destination</string>
+    <string name="calibrate_low">Low</string>
+    <string name="compass_my_location">My Location</string>
+    <string name="compass_32_05">32.05</string>
+    <string name="compass_21_03">21.03</string>
+    <string name="compass_direction_dn">DN</string>
 </resources>
